# lite-ph6-lite-

./: .gitignore  README.md  camera_exposure_pattern_test.py  check_log.py  claw_cues.py  claw_step_mode.py  conftest.py  cram_writer.py  frame_filter.py  patch_phase2_log_fallback.py  pattern_scout.py  ph6_agents.py  ph6_full_stack_coherence.py  ph6_latest_validation.sh  ph6_lite_validate.sh  ph6_run_300_validation.sh  ph6_synthetic_oracle_300.py  ph6_unfinished_scan.sh  ph6lite_coherence_check.py  ph6v  postrun_soso_swarm_summary.py  pyproject.toml  replay_cram.py  run_ph6agents.sh  run_ph6lite_check.sh  soso_swarm_lite.py  test_ph6lite_phase2.py  test_segment_cram_writer.py  test_soso_swarm_lite.py  test_token_leakage.py  virtual_tokens.py
PH6_AUDIT/current_file_inventory/: source_files.txt
PH6_PROOFS/dual_speed_soso_tok/: DUAL_SPEED_STRESS_PROOF.md  command.txt  replay_result.json  verdict.json
PH6_PROOFS/dual_speed_soso_tok/reports/: pattern_summary.json  postrun_report.md  run_summary.json  soso_swarm_summary.json
jetson_service/: app.py  ollama_runner.py  requirements.txt
ph6lite/: advisory_client.py  atomic_write.py  backend.py  schema_validator.py
schemas/: config.schema.json  manifest.json  observation.schema.json  pseudo.schema.json  session_end.schema.json  session_start.schema.json  soso.schema.json
tests/: cram_fsync_worstcase.py  cram_speed_test.py
