[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ph6lite"
version = "0.2.0"
description = "PH6-Lite advisory and schema modules for frame evaluation pipelines"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ph6lite*"]
